# projecteuler.c

./: .travis.yml  CHANGELOG  CLEAN  Makefile.am  README.asciidoc  configure.ac  euler.c  factor.c  factor.h  gcd.c  gcd.h  problem001.c  problem001.h  problem002.c  problem002.h  problem003.c  problem003.h  problem004.c  problem004.h  problem005.c  problem005.h
t/: euler.test  problem001.test  problem00160seconds.test  problem001correctsolution.test  problem001testcaseworks.test  problem00260seconds.test  problem002correctsolution.test  problem00360seconds.test  problem003correctsolution.test  problem003testcaseworks.test  problem00460seconds.test  problem004correctsolution.test  problem004testcaseworks.test  problem00560seconds.test  problem005correctsolution.test  problem005testcaseworks.test
